Format and fix lint errors in src and test
