# server/static/openapi-specification.yaml
@@ -24,14 +24,14 @@ paths:
       description: Create a new user for the analysis platform.
       responses:
         200:
-          description: "The operation was successful."
+          description: 'The operation was successful.'
           content:
             application/json:
               schema:
                 type: object
                 properties:
                   user_id:
-                    $ref: "#/components/schemas/UserID"
+                    $ref: '#/components/schemas/UserID'
                   access_token:
                     type: string
                     description: The corresponding access token for the newly created user account.
@@ -47,18 +47,18 @@ paths:
           in: path
           required: true
           schema:
-            $ref: "#/components/schemas/UserID"
+            $ref: '#/components/schemas/UserID'
       responses:
         200:
-          description: "The operation was successful."
+          description: 'The operation was successful.'
         401:
-          $ref: "#/components/responses/UnauthorizedError"
+          $ref: '#/components/responses/UnauthorizedError'
         409:
-          description: "An endpoint error occurred."
+          description: 'An endpoint error occurred.'
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Error"
+                $ref: '#/components/schemas/Error'
   /analyze/data:
     post:
       tags:
@@ -76,7 +76,7 @@ paths:
                 - location
               properties:
                 user_id:
-                  $ref: "#/components/schemas/UserID"
+                  $ref: '#/components/schemas/UserID'
                 time:
                   type: integer
                   format: int64
@@ -85,10 +85,10 @@ paths:
                 location:
                   description: The location of the violation.
                   allOf:
-                    - $ref: "#/components/schemas/Location"
+                    - $ref: '#/components/schemas/Location'
       responses:
         200:
-          description: ""
+          description: ''
           content:
             application/json:
               schema:
@@ -104,7 +104,7 @@ paths:
                       - no_stopping
                       - no_parking
         401:
-          $ref: "#/components/responses/UnauthorizedError"
+          $ref: '#/components/responses/UnauthorizedError'
   /analyze/image/upload:
     get:
       description: Returns expiring cloud storage urls. Upload urls only accept PUT requests and expect files in jpeg format.
@@ -121,7 +121,7 @@ paths:
             maximum: 5
       responses:
         200:
-          description: "The operation was successful."
+          description: 'The operation was successful.'
           content:
             application/json:
               schema:
@@ -132,13 +132,13 @@ paths:
                 properties:
                   token:
                     type: string
-                    description: "A unique image token"
+                    description: 'A unique image token'
                     example: 82571c4a-7f07-4bdc-acdc-5b2745a00de3
                   google_cloud_urls:
                     type: array
                     items:
                       type: string
-                    description: "The Google Cloud Storage urls to which the image(s) should be uploaded."
+                    description: 'The Google Cloud Storage urls to which the image(s) should be uploaded.'
                     example:
                       - https://api.google.com/...
   /analyze/image/{image_token}:
@@ -154,19 +154,19 @@ paths:
             type: string
       responses:
         200:
-          description: "The operation was successful."
+          description: 'The operation was successful.'
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/Suggestions'
         404:
-          description: "No image(s) could be found for the provided token."
+          description: 'No image(s) could be found for the provided token.'
         409:
-          description: "An endpoint error occurred."
+          description: 'An endpoint error occurred.'
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/Error"
+                $ref: '#/components/schemas/Error'
   /report:
     post:
       tags:
@@ -183,12 +183,12 @@ paths:
                 - report
               properties:
                 user_id:
-                  $ref: "#/components/schemas/UserID"
+                  $ref: '#/components/schemas/UserID'
                 report:
-                  $ref: "#/components/schemas/Report"
+                  $ref: '#/components/schemas/Report'
       responses:
         200:
-          description: "The operation was successful."
+          description: 'The operation was successful.'
 
 components:
   responses:
@@ -229,25 +229,25 @@ components:
               items:
                 type: string
               description: Suggestions for the license plate number. Empty list when no license plate number recognized.
-              example: [ "B-WL 1234", "KA KK 3455" ]
+              example: ['B-WL 1234', 'KA KK 3455']
             make:
               type: array
               items:
                 type: string
               description: Suggestions for the make. Empty list when no make recognized.
-              example: ["Mercedes-Benz"]
+              example: ['Mercedes-Benz']
             model:
               type: array
               items:
                 type: string
               description: Suggestions for the model. Empty list when no model recognized.
-              example: ["A-Class"]
+              example: ['A-Class']
             color:
               type: array
               items:
                 type: string
               description: Suggestions for the color. Empty list when no color recognized.
-              example: ["blue", "white"]
+              example: ['blue', 'white']
     Report:
       type: object
       properties:
@@ -261,7 +261,7 @@ components:
           example: 1606756404
           description: The date and time of the violation as Unix timestamp (in seconds since epoch).
         location:
-          $ref: "#/components/schemas/Location"
+          $ref: '#/components/schemas/Location'
         image_token:
           type: string
     Error:
